@@ -5,15 +5,16 @@ Extended predicate/mapper semantics
 
 Many of funcy functions expecting predicate or mapping function as an argument can take something uncallable instead of it with semantics described in this table:
 
-==========  ====================  ================
-f passed    Predicate             Mapping function
-==========  ====================  ================
-callable    f                     f
-``None``    bool                  :func:`identity`
-string      ``re_tester(f)``      ``re_finder(f)``
-mapping     ``f.get``             ``f.get``
-set         ``lambda x: x in f``  ``lambda x: x in f``
-==========  ====================  ================
+============  ====================  ================
+f passed      Predicate             Mapping function
+============  ====================  ================
+callable      f                     f
+``None``      bool                  :func:`identity`
+string        ``re_tester(f)``      ``re_finder(f)``
+int or slice  ``itemgetter(f)``     ``itemgetter(f)``
+mapping       ``f.get``             ``f.get``
+set           ``lambda x: x in f``  ``lambda x: x in f``
+============  ====================  ================
 
 
 Supporting functions
@@ -26,9 +27,10 @@ Group                     Functions
 ========================= ==============================================================
 Sequence transformation   :func:`map`, :func:`imap`, :func:`keep`, :func:`ikeep`, :func:`mapcat`, :func:`imapcat`
 Sequence filtering        :func:`filter`, :func:`ifilter`, :func:`remove`, :func:`iremove`
-Sequence mangling         :func:`dropwhile`, :func:`takewhile`, :func:`split`, :func:`split_by`
+Sequence splitting        :func:`dropwhile`, :func:`takewhile`, :func:`split`, :func:`split_by`
 Collection transformation :func:`walk`, :func:`walk_keys`, :func:`walk_values`
 Collection filtering      :func:`select`, :func:`select_keys`, :func:`select_values`
 Content tests             :func:`all`, :func:`any`, :func:`none`, :func:`one`, :func:`some`
 Function logic            :func:`all_fn`, :func:`any_fn`, :func:`none_fn`, :func:`one_fn`, :func:`some_fn`
+Function tools            :func:`compose`, :func:`complement`, :func:`juxt`, :func:`ijuxt`
 ========================= ==============================================================
