@@ -1,4 +1,5 @@
 - added ints and slices to extended fn semantics
+- added extended semantics to *_fn(), compose(), complement and i?juxt()
 
 0.5.0
 - added type testing utilities
